--- a/src/app/user-diplay/user-diplay.component.html
+++ b/src/app/user-diplay/user-diplay.component.html
@@ -47,6 +47,10 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
                     <td mat-cell *matCellDef="let element"> {{element.Address}} </td>
                 </ng-container>
+                                <ng-container matColumnDef="DOB">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Of Birth </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.DOB}} </td>
+                                </ng-container>
                 <ng-container matColumnDef="Actions">
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
                     <td mat-cell *matCellDef="let element">
